syntax = "proto3";

option go_package = "api/user-service/v1";

package user.v1;

service UserService {
  rpc CreateUser(CreateUserParams) returns (UserDetail);
  rpc GetUser(GetUserParams) returns (UserDetail);
}

message CreateUserParams {
  string id = 1;
  string name = 2;
  string email = 3;
}

message GetUserParams {
  string id = 1;
}

message UserDetail {
  string id = 1;
  string name = 2;
  string email = 3;
}

